--- a/Objects/lightSwitcher.build_log.htm
+++ b/Objects/lightSwitcher.build_log.htm
@@ -28,10 +28,9 @@ Project File Date:  11/09/2018
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling PITtimer.c...
-PITtimer.c(11): error:  #65: expected a ";"
-  }
-PITtimer.c: 0 warnings, 1 error
-".\Objects\lightSwitcher.axf" - 1 Error(s), 0 Warning(s).
+linking...
+Program Size: Code=916 RO-data=220 RW-data=0 ZI-data=352  
+".\Objects\lightSwitcher.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +58,6 @@ Package Vendor: Keil
       Source file:   Device\Source\ARM\startup_MKL46Z4.s
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
