Added turn on example

--- a/Objects/lightSwitcher.build_log.htm
+++ b/Objects/lightSwitcher.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  11/09/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling PITtimer.c...
+compiling main.c...
 linking...
-Program Size: Code=916 RO-data=220 RW-data=0 ZI-data=352  
+Program Size: Code=1088 RO-data=268 RW-data=0 ZI-data=352  
 ".\Objects\lightSwitcher.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -54,8 +54,8 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\system_MKL46Z4.c
       Source file:   Device\Source\ARM\startup_MKL46Z4.s
+      Source file:   Device\Source\system_MKL46Z4.c
 
    * Component: ARM::CMSIS:CORE:5.0.1
 Build Time Elapsed:  00:00:01
