--- a/Objects/lightSwitcher.build_log.htm
+++ b/Objects/lightSwitcher.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Yoon Kim, Rochester Institute of Technology, LIC=----
+License Information: Sean Bonaventure, RIT, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.24.1
@@ -21,32 +21,21 @@ Target DLL:      CMSIS_AGDI.dll V1.28.3.0
 Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
-C:\Users\YOON KIM\Documents\Assembly\Exercise12\AssembyProject\lightSwitcher.uvprojx
-Project File Date:  11/16/2018
+C:\Users\spb35\Desktop\Projects\KL46z\Light\lightSwitcher.uvprojx
+Project File Date:  11/20/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-compiling main.c...
-compiling PinDriver.c...
-compiling PITtimer.c...
-PITtimer.c(64): warning:  #550-D: parameter "timer"  was set but never used
-  void timerExpired(uint8_t timer){
-PITtimer.c: 1 warning, 0 errors
-assembling startup_MKL46Z4.s...
-assembling ProgramTemplate_C_Start.s...
-compiling system_MKL46Z4.c...
-linking...
-Program Size: Code=2776 RO-data=268 RW-data=316 ZI-data=356  
-".\Objects\lightSwitcher.axf" - 0 Error(s), 1 Warning(s).
+Build target 'Target 1'
+".\Objects\lightSwitcher.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.4.0.pack
-                ARM.CMSIS.5.4.0
+                http://www.keil.com/pack/ARM.CMSIS.5.0.1.pack
+                ARM.CMSIS.5.0.1
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.1.2
+   * Component: CORE Version: 5.0.1
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.Kinetis_KLxx_DFP.1.14.0.pack
@@ -56,7 +45,7 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.4.0\CMSIS\Core\Include
+  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.1\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\Kinetis_KLxx_DFP\1.14.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
@@ -65,8 +54,8 @@ Package Vendor: Keil
       Source file:   Device\Source\system_MKL46Z4.c
       Source file:   Device\Source\ARM\startup_MKL46Z4.s
 
-   * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:01
+   * Component: ARM::CMSIS:CORE:5.0.1
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
