--- a/Objects/lightSwitcher.build_log.htm
+++ b/Objects/lightSwitcher.build_log.htm
@@ -22,11 +22,20 @@ Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
 C:\Users\spb35\Desktop\Projects\KL46z\Light\lightSwitcher.uvprojx
-Project File Date:  11/20/2018
+Project File Date:  11/25/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
+compiling main.c...
+compiling PITtimer.c...
+compiling PinDriver.c...
+assembling startup_MKL46Z4.s...
+assembling mixedAssembly.s...
+assembling HardFault_LCD.s...
+compiling system_MKL46Z4.c...
+linking...
+Program Size: Code=4540 RO-data=296 RW-data=332 ZI-data=356  
 ".\Objects\lightSwitcher.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -55,7 +64,7 @@ Package Vendor: Keil
       Source file:   Device\Source\ARM\startup_MKL46Z4.s
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
