--- a/Objects/lightSwitcher.htm
+++ b/Objects/lightSwitcher.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\lightSwitcher.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\lightSwitcher.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Tue Nov 27 01:15:48 2018
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Tue Nov 27 12:18:12 2018
 <BR><P>
 <H3>Maximum Stack Usage =         88 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -393,13 +393,14 @@ Global Symbols
 <P><STRONG><a name="[21]"></a>PIT_IRQHandler</STRONG> (Thumb, 18 bytes, Stack size 0 bytes, pittimer.o(i.PIT_IRQHandler))
 <BR>[Address Reference Count : 1]<UL><LI> startup_mkl46z4.o(RESET)
 </UL>
-<P><STRONG><a name="[59]"></a>__ARM_common_switch8</STRONG> (Thumb, 28 bytes, Stack size 8 bytes, pindriver.o(i.__ARM_common_switch8))
+<P><STRONG><a name="[59]"></a>__ARM_common_switch8</STRONG> (Thumb, 28 bytes, Stack size 8 bytes, main.o(i.__ARM_common_switch8))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = __ARM_common_switch8
 </UL>
 <BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;turnOn
 <LI><a href="#[58]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;turnOff
 <LI><a href="#[5d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;readPin
 <LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;enablePin
+<LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[42]"></a>initPins</STRONG> (Thumb, 42 bytes, Stack size 24 bytes, main.o(i.initPins))
@@ -484,7 +485,7 @@ Global Symbols
 <LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GuessInitiated
 </UL>
 
-<P><STRONG><a name="[53]"></a>GuessInitiated</STRONG> (Thumb, 110 bytes, Stack size 8 bytes, main.o(i.GuessInitiated))
+<P><STRONG><a name="[53]"></a>GuessInitiated</STRONG> (Thumb, 130 bytes, Stack size 8 bytes, main.o(i.GuessInitiated))
 <BR><BR>[Stack]<UL><LI>Max Depth = 64<LI>Call Chain = GuessInitiated &rArr; introFlash &rArr; wait &rArr; setTimer &rArr; __aeabi_idivmod
 </UL>
 <BR>[Calls]<UL><LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PutStringSB
@@ -547,10 +548,11 @@ Global Symbols
 <LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GuessInitiated
 </UL>
 
-<P><STRONG><a name="[39]"></a>main</STRONG> (Thumb, 360 bytes, Stack size 24 bytes, main.o(i.main))
+<P><STRONG><a name="[39]"></a>main</STRONG> (Thumb, 396 bytes, Stack size 24 bytes, main.o(i.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 88<LI>Call Chain = main &rArr; initGame &rArr; introFlash &rArr; wait &rArr; setTimer &rArr; __aeabi_idivmod
 </UL>
-<BR>[Calls]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;turnOn
+<BR>[Calls]<UL><LI><a href="#[57]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;wait
+<LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;turnOn
 <LI><a href="#[58]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;turnOff
 <LI><a href="#[5e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;timerExpired
 <LI><a href="#[5c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;setTimer
@@ -560,6 +562,7 @@ Global Symbols
 <LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PutChar
 <LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetCharNoBlock
 <LI><a href="#[5a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;initGame
+<LI><a href="#[59]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__ARM_common_switch8
 <LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GuessInitiated
 </UL>
 <BR>[Called By]<UL><LI><a href="#[38]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
@@ -614,7 +617,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[5c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;setTimer
 </UL>
-<BR>[Called By]<UL><LI><a href="#[54]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;introFlash
+<BR>[Called By]<UL><LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+<LI><a href="#[54]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;introFlash
 <LI><a href="#[5a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;initGame
 <LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cascadeAnim
 </UL>
